# whisper-rust-s2t

./: .gitignore  CLAUDE.md  Cargo.toml  FM2_20250626_043509_log.json  FM2_20250626_043509_transcription.txt  FRONTEND_MIGRATION.md  MIGRATION_COMPLETED.md  MIGRATION_STATUS.md  README.md  TEST_SCRIPTS_README.md  TIMEOUT_HANDLING_IMPROVEMENTS.md  TIMEOUT_OPTIMIZATION_SUMMARY.md  example_result.json  result.json  test_dynamic_timeout.sh  test_integration.sh  test_metal_issue.sh  test_redis_integration.sh  test_summary.txt  test_timeout_handling.sh  test_upload_workflow.py  test_upload_workflow.sh
frontend/: .gitignore  QUEUE_REALTIME_DOCS.md  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/debug/transcriptions/: route.ts
frontend/app/api/detect-risk/: route.ts
frontend/app/api/queue-status/: route.ts
frontend/app/api/queue-tasks/: route.ts
frontend/app/api/queue/cleanup/: route.ts
frontend/app/api/risk-analysis/: route.ts
frontend/app/api/task/[id]/status/: route.ts
frontend/app/api/transcribe-job/: route.ts
frontend/app/api/transcriptions/: route.ts
frontend/app/api/transcriptions-new/: route.ts
frontend/app/api/transcriptions-new/[id]/: route.ts
frontend/app/api/transcriptions-new/update-risk/: route.ts
frontend/app/api/transcriptions/[id]/: route.ts
frontend/app/api/transcriptions/retry/: route.ts
frontend/app/api/upload-audio/: route.ts
frontend/app/queue/: page.tsx
frontend/app/queue-test/: page.tsx
frontend/app/transcriptions/: page.tsx
frontend/app/transcriptions/[id]/: loading.tsx  page.tsx
frontend/app/upload/: page.tsx
frontend/components/: app-with-splash.tsx  audio-player.tsx  loading-skeleton.tsx  mini-loading.tsx  navbar.tsx  notification-center.tsx  queue-overview-new.tsx  queue-overview.tsx  queue-progress-new-fixed.tsx  risk-analysis-status.tsx  splash-screen.tsx  sync-status-widget.tsx  system-status-indicator.tsx  transcription-detail.tsx  transcriptions-list-new.tsx  transcriptions-list-react-query.tsx  transcriptions-list.tsx  upload-form-new.tsx  upload-form-react-query.tsx  upload-form-simple.tsx  upload-form.tsx
frontend/components/ui/: progressing-status.tsx
frontend/contexts/: loading-context.tsx  queue-context.tsx  websocket-context.tsx
frontend/hooks/: use-loading-state.ts  use-queue.ts  use-sync-status.ts  use-transcription-queue.ts  use-transcriptions.ts  use-websocket.ts
frontend/lib/: api-config.ts  providers.tsx  query-client.tsx  types.ts
frontend/lib/services/: base-api.ts  queue-service.ts  risk-analysis-service.ts  types.ts
frontend/prisma/: dev.db  schema.prisma
frontend/prisma/migrations/20250516043913_remove_reference_image/: migration.sql
frontend/prisma/migrations/20250613082323_add_risk_detection_fields/: migration.sql
frontend/prisma/migrations/20250624041345_enhance_transcription_schema/: migration.sql
frontend/prisma/migrations/20250624074040_separate_queue_and_transcriptions/: migration.sql
frontend/prisma/migrations/20250625043650_init_db/: migration.sql
frontend/prisma/migrations/20250625080534_add_duration_to_queue_task/: migration.sql
frontend/public/uploads/audio/: .gitkeep
src/: lib.rs  main.rs  queue.rs  transcription.rs
static/: index.html
(+3 files in other folders)
