[package]
name = "thai-transcriber"
version = "0.1.0"
edition = "2021"

[lib]
name = "thai_transcriber"
path = "src/lib.rs"

[dependencies]

whisper-rs = { version = "0.10.0", features = ["metal", "coreml"] }
whisper-rs-sys = { version = "0.8.0", features = ["metal", "coreml"] }

clap = { version = "4.0", features = ["derive"] }
hound = { version = "3.5", optional = true }
symphonia = { version = "0.5", optional = true }
rubato = "0.15"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
rodio = "0.20"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Actix Web dependencies
actix-web = "4.4"
actix-multipart = "0.6"
actix-files = "0.6"
uuid = { version = "1.6", features = ["v4"] }
tempfile = "3.8"
llamaedge = "0.0.1"
reqwest = { version = "0.12", features = ["json"] }

[features]
default = ["wav-support", "full-audio-support"]
wav-support = ["hound"]
full-audio-support = ["symphonia"]

[[bin]]
name = "transcribe"
path = "src/main.rs"

[[bin]]
name = "api-server"
path = "src/bin/api_server.rs"